--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,27 @@ nav .navsection ul li span{
 
         
     }
+    #headMiddle .hmleft img{
+        width: 100%;
+    }
+
+}
+@media only screen and (max-width: 460px) {
+    #headMiddle .hmright{
+        width: 40%;
+        font-weight: bold;
+
+        
+    }
+    #headMiddle .hmright h1,
+    #headMiddle .hmright a{
+        font-size: 12px;
+
+        
+    }
+    #headMiddle .hmleft img{
+        width: 100%;
+    }
 
 }
 /* Sidebar top and middle part End */
@@ -191,6 +212,7 @@ nav .navsection ul li span{
         display: block;
         background-color: #26335D;
         /* width: 99.5%; */
+        width: 100%;
     }
     .navmobile ul{
         list-style: none;
@@ -199,10 +221,12 @@ nav .navsection ul li span{
     .navmobile ul li .spanright{
         float: right;
     }
-
+    .navmobile ul li{
+        /* width: 99%; */
+    }
     .navmobile ul li a{
         border-bottom: 0.5px solid gray;
-        width: 99%;
+        /* width: %; */
         display: flex;
         flex-direction: row;
         justify-content: space-between;
@@ -218,7 +242,7 @@ nav .navsection ul li span{
     }
     .navmobile ul li a .spanright .fa-chevron-down{
         color: red;
-        margin-left: 65%;
+        margin-left: 60%;
         border: 1px solid white;
         width: 30px;
         height: 20px;
@@ -228,7 +252,7 @@ nav .navsection ul li span{
     }
     .navmobile ul ul li a{
         border-bottom: 0.5px solid gray;
-        width: 90%;
+        width:90%;
         display: flex;
         flex-direction: row;
         justify-content: flex-start;
@@ -269,7 +293,7 @@ nav .navsection ul li span{
     }
     .navmobile  .mobilebar .homebar{
         float: right;
-        margin-right: 20px;
+        margin-right: 22.5px;
         cursor: pointer;
         /* padding: 5px; */
         padding-left: 8px;
